@@ -14,6 +14,7 @@ codebird-php - changelog
 + #145 Support TON API
 + #120 Support Ads API
 + Support WebP media format
++ Fixes for non-multipart media uploads, see #141
 
 2.7.2 (2015-09-23)
 - #135 Invalid HTTP request headers in non-cURL mode
